Correct cards spacing and read button colors

--- a/style.css
+++ b/style.css
@@ -5,11 +5,7 @@ body {
 }
 
 .container {
-  background-color: saddlebrown;
-  color: white;
   display: grid;
-  text-align: center;
-  padding-bottom: 1rem;
 }
 
 .btn-insert-book{
@@ -37,7 +33,8 @@ body {
   left: 50%;
   top: 50%;
   z-index: 1;
-  width: 30vw;
+  /* width: 30vw; */
+  width: 15rem;
   color: white;
   background-color: sandybrown;
   display: none;
@@ -94,7 +91,7 @@ header {
   text-align: center;
   align-items: center;
   padding: 1.5rem;
-  height: 5vh;
+  height: 10vh;
   color: white;
   font-size: 40px;
   text-shadow: 2px 2px 2px black;
@@ -108,7 +105,7 @@ header {
   min-height: 72vh;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
-  grid-template-rows: repeat(auto-fill, minmax(15rem, 1fr));
+  grid-template-rows: repeat(auto-fill, minmax(5rem, 1fr));
 }
 
 .card {
